Get tests to pass